unpackaged/main/default/objects/GC_Show_Team_Member__c/GC_Show_Team_Member__c.object-meta.xml
<CustomObject>
    <description>GES Connect (GC) Show Team Member Custom Object.  This Object is used to represent a show team to give record level access to GES Connect objects.  This object is a junction object between Opportunity and User and specifies a role within a Show.  Primary maintenance of the show team members are performed by the account manager.</description>
    <label>Show Team Member</label>
    <nameField>
        <displayFormat>STM-{0000}</displayFormat>
        <label>Show Team Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Show Team Members</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>