unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/AM_Weight__c.field-meta.xml
<CustomField>
    <fullName>AM_Weight__c</fullName>
    <label>AM Weight:</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>