unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/Connect2_Show__c.field-meta.xml
<CustomField>
    <fullName>Connect2_Show__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Connect2 Show</label>
    <referenceTo>GC_Connect2_Show__c</referenceTo>
    <relationshipLabel>Show Team Members</relationshipLabel>
    <relationshipName>Show_Team_Members</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>