unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/Daily_Order_Summary_Emails__c.field-meta.xml
<CustomField>
    <fullName>Daily_Order_Summary_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you want a daily summary email for orders.</inlineHelpText>
    <label>Daily Order Summary Emails</label>
    <type>Checkbox</type>
</CustomField>