unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/Name_Unique__c.field-meta.xml
<CustomField>
    <fullName>Name_Unique__c</fullName>
    <label>Name Unique</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>