unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/No_Notification_Emails__c.field-meta.xml
<CustomField>
    <fullName>No_Notification_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for SAL 519</description>
    <inlineHelpText>Check this box if you don&#39;t want any summary emails.</inlineHelpText>
    <label>No Notification Emails</label>
    <type>Checkbox</type>
</CustomField>