unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/Pre_show_Tile_Access__c.field-meta.xml
<CustomField>
    <fullName>Pre_show_Tile_Access__c</fullName>
    <label>Pre-show Tile Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OrdersPreshow</fullName>
            </value>
            <value>
                <fullName>GraphicProofingPreshow</fullName>
            </value>
            <value>
                <fullName>AnalyticsPreshow</fullName>
            </value>
            <value>
                <fullName>FileCollaborationPreshow</fullName>
            </value>
            <value>
                <fullName>SharePoint</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>ProofBookPreshow</fullName>
                <isActive>false</isActive>
                <label>ProofBookPreshow</label>
            </value>
            <value>
                <fullName>TasksPreshow</fullName>
                <isActive>false</isActive>
                <label>TasksPreshow</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>