unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/ReceiveNotificationAllOrders__c.field-meta.xml
<CustomField>
    <fullName>ReceiveNotificationAllOrders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Notification All Orders</label>
    <type>Checkbox</type>
</CustomField>