unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/ReceiveNotificationMyOrders__c.field-meta.xml
<CustomField>
    <fullName>ReceiveNotificationMyOrders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Notification My Orders</label>
    <type>Checkbox</type>
</CustomField>