unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>GC_Show_Attribute__c.Connect2_Show__c</field>
            <operation>equals</operation>
            <valueField>$Source.Connect2_Show__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GC_Show_Attribute__c</referenceTo>
    <relationshipLabel>Show Team Members</relationshipLabel>
    <relationshipName>Show_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>