unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/Show_Analytics_Role__c.field-meta.xml
<CustomField>
    <fullName>Show_Analytics_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created under SAL-436</description>
    <inlineHelpText>Check this box to allow team member to use the analytics portal.</inlineHelpText>
    <label>Show Analytics Access</label>
    <type>Checkbox</type>
</CustomField>