unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Name__c</fullName>
    <formula>Connect2_Show__r.Show_Name__c</formula>
    <label>Show Name Formula</label>
    <type>Text</type>
</CustomField>