unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/Show_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Show_Name_Text__c</fullName>
    <label>Show Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>