unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/Show_Role__c.field-meta.xml
<CustomField>
    <fullName>Show_Role__c</fullName>
    <description>Determines the level of access to associated elements on a show.</description>
    <inlineHelpText>Determines the level of access to associated elements on a show.</inlineHelpText>
    <label>Show Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Convention_Planning</fullName>
                <label>Convention Planning</label>
            </value>
            <value>
                <fullName>Creative Director</fullName>
            </value>
            <value>
                <fullName>Designer/Detailer</fullName>
            </value>
            <value>
                <fullName>Director of Account Management</fullName>
            </value>
            <value>
                <fullName>Graphics Project Manager</fullName>
            </value>
            <value>
                <fullName>Graphics Project Manager Direct</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Secondary Account Manager</fullName>
            </value>
            <value>
                <fullName>Show Organizer</fullName>
            </value>
            <value>
                <fullName>Show Organizer - Read Only</fullName>
            </value>
            <value>
                <fullName>Traffic Administrator</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>