unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/Tiles_Access__c.field-meta.xml
<CustomField>
    <fullName>Tiles_Access__c</fullName>
    <description>Select the tiles that you want to give access to this team member</description>
    <inlineHelpText>Select the tiles that you want to give access to this team member</inlineHelpText>
    <label>Tiles Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tasks</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
            <value>
                <fullName>Attendee Management</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Service Tickets</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>ProofBook</fullName>
            </value>
            <value>
                <fullName>Exhibitors</fullName>
            </value>
            <value>
                <fullName>Accomodation</fullName>
            </value>
            <value>
                <fullName>Graphic Proofing</fullName>
            </value>
            <value>
                <fullName>SharePoint</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>