unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up to the salesforce user serving the role on the show team.</description>
    <inlineHelpText>Looks up to the salesforce user serving the role on the show team.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Show Team Members</relationshipLabel>
    <relationshipName>Show_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>