unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/User_Information__c.field-meta.xml
<CustomField>
    <fullName>User_Information__c</fullName>
    <formula>User__r.FirstName + &#39; &#39; + User__r.LastName + IF(ISBLANK(User__r.Title), &#39;&#39;, &#39; - &#39; + User__r.Title) + IF(ISBLANK(User__r.Email), &#39;&#39;, &#39; - &#39; + User__r.Email) + IF(ISBLANK(User__r.Phone), &#39;&#39;, &#39; - &#39; + User__r.Phone)</formula>
    <label>User Information</label>
    <type>Text</type>
</CustomField>