unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/UserEmail__c.field-meta.xml
<CustomField>
    <fullName>UserEmail__c</fullName>
    <formula>User__r.Email</formula>
    <label>UserEmail</label>
    <type>Text</type>
</CustomField>