unpackaged/main/default/objects/GC_Show_Team_Member__c/fields/Weekly_Order_Summary_Emails__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Order_Summary_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you want the Show Team member to get a weekly summary email.</inlineHelpText>
    <label>Weekly Order Summary Emails</label>
    <type>Checkbox</type>
</CustomField>