unpackaged/main/default/objects/GC_Show_Team_Member__c/validationRules/Client_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Rule</fullName>
    <active>true</active>
    <description>Rules for Clients</description>
    <errorConditionFormula>AND(
   ISPICKVAL(Show_Role__c, &#39;Show Organizer - Read Only&#39;),
   (User__r.Profile.Name &lt;&gt; &#39;GC Community Client&#39;)
)</errorConditionFormula>
    <errorMessage>Only Users with Client Profiles can have the Client Role.</errorMessage>
</ValidationRule>