unpackaged/main/default/objects/GC_Show_Team_Member__c/validationRules/Creative_Director_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Creative_Director_Rule</fullName>
    <active>true</active>
    <description>Rules for Creative Directors</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Show_Role__c, &#39;Creative Director&#39;),
   (NOT(INCLUDES(User__r.GC_Show_Role__c, &#39;GC Creative Director&#39;)))
)</errorConditionFormula>
    <errorMessage>Only Users with Creative Director Profiles can have the GC Creative Director Role.</errorMessage>
</ValidationRule>