unpackaged/main/default/objects/GC_Show_Team_Member__c/validationRules/Designer_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Designer_Rule</fullName>
    <active>true</active>
    <description>Rules for Designers</description>
    <errorConditionFormula>AND(
ISPICKVAL(Show_Role__c, &#39;Designer&#39;),
( NOT(INCLUDES(User__r.GC_Show_Role__c, &#39;GC Detailer&#39;)))
)</errorConditionFormula>
    <errorMessage>Only Users with Detailer Profiles can have the Designer Role.</errorMessage>
</ValidationRule>