unpackaged/main/default/objects/GC_Show_Team_Member__c/validationRules/Detailer_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Detailer_Rule</fullName>
    <active>true</active>
    <description>Rules for Designer/Detailer</description>
    <errorConditionFormula>AND(
ISPICKVAL(Show_Role__c, &#39;Designer/Detailer&#39;),
(NOT(INCLUDES(User__r.GC_Show_Role__c, &#39;GC Detailer&#39;)))
)</errorConditionFormula>
    <errorMessage>Only Users with Detailer Profiles can have the Design Engineer Role.</errorMessage>
</ValidationRule>