unpackaged/main/default/objects/GC_Show_Team_Member__c/validationRules/Director_Account_Management_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Director_Account_Management_Rule</fullName>
    <active>true</active>
    <description>Rules for Director of Account Management</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Show_Role__c, &#39;Director of Account Management&#39;),
(NOT(INCLUDES(User__r.GC_Show_Role__c, &#39;GC Director of Account Management&#39;)))
)</errorConditionFormula>
    <errorMessage>Only Users with Director of Account Management Profiles can have the Director of Account Management Role.</errorMessage>
</ValidationRule>