unpackaged/main/default/objects/GC_Show_Team_Member__c/validationRules/Sales_Manager_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Manager_Rule</fullName>
    <active>true</active>
    <description>Rules for Sales Manager</description>
    <errorConditionFormula>AND
(
ISPICKVAL(Show_Role__c, &#39;Sales Manager&#39;),
NOT(INCLUDES(User__r.GC_Show_Role__c, &#39;GC Account Manager&#39;)),
NOT(INCLUDES(User__r.GC_Show_Role__c, &#39;GC Sales Manager&#39;))
)</errorConditionFormula>
    <errorMessage>Only Users with Account Manager Profiles can have the Sales Manager Role.</errorMessage>
</ValidationRule>