unpackaged/main/default/objects/GC_Show_Team_Member__c/validationRules/Secondary_Account_Manager_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Secondary_Account_Manager_Rule</fullName>
    <active>true</active>
    <description>Rules for Secondary Account Managers</description>
    <errorConditionFormula>AND
(
ISPICKVAL(Show_Role__c, &#39;Secondary Account Manager&#39;),
NOT(INCLUDES(User__r.GC_Show_Role__c, &#39;GC Account Manager&#39;)),
NOT(INCLUDES(User__r.GC_Show_Role__c, &#39;GC Sales Manager&#39;))
)</errorConditionFormula>
    <errorMessage>Only Users with Account Manager Profiles can have the Secondary Account Manager Role.</errorMessage>
</ValidationRule>