unpackaged/main/default/objects/GC_Show_Team_Member__c/validationRules/Service_Type_is_only_for_vendors.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Type_is_only_for_vendors</fullName>
    <active>true</active>
    <description>his field is available only for show members with a Vendor role.</description>
    <errorConditionFormula>AND((ISPICKVAL(Show_Role__c, &#39;Vendor&#39;)),(ISBLANK(Service_Type__c )))</errorConditionFormula>
    <errorDisplayField>Service_Type__c</errorDisplayField>
    <errorMessage>Show Members with a Vendor role should select service type.</errorMessage>
</ValidationRule>