unpackaged/main/default/objects/GC_Show_Team_Member__c/validationRules/Show_Organizer_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Show_Organizer_Rule</fullName>
    <active>true</active>
    <description>Rules for Show Organizer</description>
    <errorConditionFormula>AND
(
ISPICKVAL(Show_Role__c, &#39;Show Organizer&#39;),
NOT(INCLUDES(User__r.GC_Show_Role__c, &#39;GC Account Manager&#39;)),
NOT(INCLUDES(User__r.GC_Show_Role__c, &#39;GC Sales Manager&#39;)),
(User__r.Profile.Name &lt;&gt; &#39;GC Community Client&#39;)
)</errorConditionFormula>
    <errorMessage>Only Users with Account Manager, Sales Manager, or Client Profiles can have the Show Organizer Role</errorMessage>
</ValidationRule>