unpackaged/main/default/objects/GC_Show_Team_Member__c/validationRules/Traffic_Administrator_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Traffic_Administrator_Rule</fullName>
    <active>true</active>
    <description>Rules for Traffic Administrators</description>
    <errorConditionFormula>AND(
   ISPICKVAL(Show_Role__c, &#39;Traffic Administrator&#39;),
   (NOT(INCLUDES(User__r.GC_Show_Role__c, &#39;GC Traffic Administrator&#39;)))
)</errorConditionFormula>
    <errorMessage>Only Users with Traffic Administrator Profiles can have the Traffic Administrator Role.</errorMessage>
</ValidationRule>