unpackaged/main/default/objects/GC_Show_Team_Member__c/validationRules/Vendor_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Vendor_Rule</fullName>
    <active>true</active>
    <description>Rules for Vendors</description>
    <errorConditionFormula>AND(
   ISPICKVAL(Show_Role__c, &#39;Vendor&#39;),
   (User__r.Profile.Name &lt;&gt; &#39;GC Community Vendor&#39;)
)</errorConditionFormula>
    <errorMessage>Only Users with Vendor Profiles can have the Vendor Role.</errorMessage>
</ValidationRule>