unpackaged/main/default/objects/GC_Show_Team_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Connect2_Show__c</columns>
    <columns>Show_Name_Text__c</columns>
    <columns>Show_Role__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>